WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203790
REGRESSION (
r251623
): When downloading a QuickLook file, the web view navigates to a "The URL can't be shown" error page instead of staying on the current page
https://bugs.webkit.org/show_bug.cgi?id=203790
Summary
REGRESSION (r251623): When downloading a QuickLook file, the web view navigat...
Andy Estes
Reported
2019-11-02 12:43:54 PDT
REGRESSION (
r251623
): When downloading a QuickLook file, the web view navigates to a "The URL can't be shown" error page instead of staying on the current page
Attachments
Patch
(9.00 KB, patch)
2019-11-02 12:55 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2019-11-02 12:55:43 PDT
Created
attachment 382685
[details]
Patch
Andy Estes
Comment 2
2019-11-02 12:55:45 PDT
<
rdar://problem/56795440
>
WebKit Commit Bot
Comment 3
2019-11-04 08:32:43 PST
Comment on
attachment 382685
[details]
Patch Clearing flags on attachment: 382685 Committed
r251991
: <
https://trac.webkit.org/changeset/251991
>
WebKit Commit Bot
Comment 4
2019-11-04 08:32:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug